[package]
name = "nexlint-lints"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0.90"
camino = "1.1.9"
diffy = "0.3"
globset = "0.4.15"
guppy = "0.17.8"
nexlint = { path = "../nexlint" }
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.5.8"
