[package]
name = "nexlint-lints"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0.98"
camino = "1.1.9"
diffy = "0.4"
globset = "0.4.16"
guppy = "0.17.19"
nexlint = { path = "../nexlint" }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.5.8"
