[package]
name = "nexlint"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
camino = { version = "1.1.7", features = ["serde1"] }
debug-ignore = "1.0.5"
determinator = "0.12.0"
guppy = "0.17.7"
hakari = { version = "0.17.3", features = ["cli-support"] }
hex = "0.4.3"
once_cell = "1.19.0"
serde = { version = "1.0.207", features = ["derive"] }
