[package]
name = "x"
version = "0.1.0"
description = "eXtended cargo tasks"
edition = "2018"
publish = false
license = "Apache-2.0 OR MIT"

[dependencies]
structopt = "0.3.26"
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
chrono = "0.4.41"
nexlint = { path = "../nexlint" }
nexlint-lints = { path = "../nexlint-lints" }
